Working solution. I'm thinking backstretch may have some issues with responsiveness across divs.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -219,16 +219,16 @@ h2 {
 
 /* line 167, ../scss/screen.scss */
 .stretchtest {
-  width: 55em;
-  min-width: 100%;
-  height: 40em;
+  width: 80%;
+  height: 35em;
+  background-size: 100% 100%;
   /*padding: 4px;*/
   border: 1px solid #ccc;
   display: inline-block;
 }
 /* line 174, ../scss/screen.scss */
 .stretchtest img {
-  min-width: 50%;
+  min-width: 100%;
   height: auto;
 }
 
@@ -293,6 +293,7 @@ h2 {
   /* line 222, ../scss/screen.scss */
   .stretchtest {
     max-height: 30em;
+    width: 75%;
     overflow: hidden;
   }
 }
